# boilerplates

python_package/: package_and_testrun.sh  pyproject.toml
python_package/src/: cli.py
